# qts

./: .gitattributes  .gitignore  Dockerfile  Dockerfile-base  LICENSE  README.md  mts.db  mts.sqlite  mts.sqlite3  pom.xml  pyproject.toml  qts.db
.run/: MtsAdminApplication.run.xml  serve.run.xml
examples/openctp/: md_demo.py  td_demo.py
fts-ctrader/: .gdbinit
fts-ctrader/conf/: symbol-sz.txt
fts-ctrader/include/: objectFactory.hpp  objectPool.h
fts-master/: pom.xml
fts-master/fts-admin/: pom.xml
fts-master/fts-common/: pom.xml
fts-master/fts-trader/: pom.xml
fts-web/: .env.development  pnpm-lock.yaml
mts-adapter/: pom.xml
mts-adapter/lib/: readme.txt
mts-admin/: pom.xml
mts-admin/mts-app/: pom.xml
mts-app/: pom.xml
mts-common/: pom.xml
mts-core/: .gitignore  CMakeLists.txt  README.md  account.json  config.json  main.cpp  mts-core.db  pom.xml  strategy.json
mts-core/conf/: account.json  setting-quote.json  setting-trade.json  setting.json  strategy-ost.xml
mts-core/depends/: CMakeLists.txt
mts-core/depends/hpf_sze/: receive_order.h  receive_ts.cpp  sze_hpf_define.h
mts-core/depends/hpf_sze_efvi/: efvi_receive_depend.h  efvi_receive_order.cpp  efvi_receive_snap.h  sze_hpf_define.h
mts-core/depends/nanolog/: Log.cc  Log.h  LogTest.cc  NanoLogCpp17.h
mts-core/include/: Acct.h  BarGenerator.hpp  Config.h  Configure.h  Context.h  CtpDataConvert.h  CtpMdGateway.h  CtpTdGateway.h  Data.h  DataBuilder.h  Delegate.h  EngineContext.h  Enums.h  Gateway.h  GatewayFactory.h  LocalPosition.h  LockFreeQueue.h  LockFreeQueue.hpp  Logger.h  Message.h  Monitor.h  MsgListener.h  ObjectFactory.hpp  Queue.h  Session.h  ShmQuote.h  Singleton.h  SocketData.h  SqliteHelper.hpp  Strategy.h  StrategyFactory.hpp  TradeEngine.h  TradeExecutor.h  UdsMsg.h  UdsServer.h  Util.h  acct.h  barGenerator.hpp  config.h  context.h  (+8 more)
mts-core/include/ctp/: ThostFtdcMdApi.h
mts-core/include/fmtlog/: fmtlog.h
mts-core/include/nanoLog/: GeneratedCode.h  Log.h  NanoLogCpp17.h  Packer.h  RuntimeLogger.h  TimeTrace.h
mts-core/include/ost/: UTApi.h
mts-core/include/strategy/: GoldStrategy.h
mts-core/src/: CMakeLists.txt  TradeCore.cpp  UdsClient.cpp
mts-core/src/common/: SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h  SocketServer.hpp  SocketSession.cpp  SocketSession.h  socketClient.hpp  socketServer.hpp  socket_multicast.hpp  taskScheduler.hpp  timer.hpp  util.hpp
mts-core/src/engine/: EngineContext.cpp  LocalPosition.cpp  Queue.cpp  TradeEngine.cpp  TradeExecutor.cpp  TradeExecutor.h
mts-core/src/gateway/: CtpMdGateway.cpp  CtpMdGateway.h  CtpTdGateway.cpp  CtpTdGateway.h  DataMapping.h  EfhMdGateway.cpp  EfhMdGateway.h  Gateway.h  GatewayFactory.cpp  GatewayFactory.h  GatewayFactory.hpp  OstMdGateway.cpp  OstMdGateway.h  OstMdGateway.hpp  OstTdGateway.cpp  OstTdGateway.h  OstTdGateway.hpp  ctpMdGateway.hpp  ctpTdGateway.cpp  ctpTdGateway.h  ctpTdGateway.hpp  dataMapping.h  efhMdGateway.hpp  gateway.h  gatewayFactory.hpp  ostMdGateway.hpp  ostTdGateway.hpp  toraL1MdGateway.hpp  toraL2MdGateway.hpp  trade_demo.cpp
mts-core/src/log/: Cycles.cc  GeneratedCode.cc  Log.cc  LogDecompressor.cc  NanoLog.cc  RuntimeLogger.cc  TimeTrace.cc  Util.cc
mts-core/src/master/: MasterExecutor.cpp  MasterExecutor.h  main.cpp
mts-core/src/protobuf/: cmd.proto  order.proto
mts-core/src/quote/: main.cpp  quotaExecutor.cpp  quotaExecutor.h
mts-core/src/shell/: main.cpp
mts-core/src/strategy/: GoldStrategy.cpp  GoldStrategy.h  Strategy.cpp  Strategy.h  goldStrategy.hpp  strategy.cpp  strategy.h  strategyFactory.hpp
mts-core/src/test/: main.cpp
mts-core/src/trade/: ObjectPool.cpp  TradeExecutor.cpp  TradeExecutor.h  acct.cpp  acct.h  main.cpp  tradeExecutor.cpp  tradeExecutor.h
mts-core/src/util/: AccountConfig.cpp  Configure.cpp  Logger.cpp  UdsClient.cpp  UdsClient.h  UdsMsg.cpp  UdsServer.cpp  UdsServer.h  Util.cpp  Util.h
mts-core/tool/: client.py
mts-master/: pom.xml
mts-master/mts-admin/: pom.xml
mts-master/mts-agent/: pom.xml
mts-master/mts-client/: pom.xml
mts-master/mts-common/: pom.xml
mts-master/mts-proxy/: pom.xml
mts-master/mts-trade/: pom.xml
mts-service/: pom.xml
mts-trade/: pom.xml
mts-web/: .env.development  package.json  vue.config.js
mts-web/public/: serverConfig.json
mts-web/types/: global.d.ts
qts-admin/: README.md  app.py  config.json  config.py  requirements.txt
qts-admin/common/: base_router.py  resp.py  resp_handler.py
qts-common/: setup.py
qts-ctrader/: CMakeLists.txt  README.md  qts-tool.py  xmake.lua
qts-ctrader/conf/: strategy-ost.xml  strategy.json  symbol-sh.txt
qts-ctrader/depends/fmtlog/: CMakeLists.txt  fmtlog.h
qts-ctrader/depends/hpf_sze/: receive_order.cpp  receive_ts.h  socket_multicast.cpp  socket_multicast.h
qts-ctrader/depends/hpf_sze_efvi/: efvi_receive_order.h  efvi_receive_ts.h  main.cpp
qts-ctrader/include/: config.h  context.h  cron.hpp  delegate.h  enums.h  lockFreeQueue.hpp  monitor.h  msgListener.h  ringBuffer.h  semaphore.h  shm.hpp  thread_pool.h  tscns.h
qts-ctrader/include/ost/: UTApiDataType.h  UTApiStruct.h
qts-ctrader/include/tora/: TORATstpLev2ApiStruct.h  TORATstpLev2MdApi.h
qts-ctrader/include/udp_sf/: quote_common.h
qts-ctrader/src/: CMakeLists.txt  xmake.lua
qts-ctrader/src/common/: multicast.hpp  socketBase.h  socket_multicast_sf.hpp  sqliteHelper.hpp  sse_hpf_quote.hpp  taskScheduler.hpp  timer.hpp
qts-ctrader/src/gateway/: gateway.cpp  gatewayFactory.hpp  ostMdGateway.hpp  toraL1MdGateway.hpp
qts-ctrader/src/shell/: main.cpp
qts-ctrader/src/strategy/: goldStrategy.hpp  strategy.cpp
qts-ctrader/src/test/: main.cpp
qts-ctrader/src/trade/: acct.cpp  tradeExecutor.h
qts-master/: pom.xml
qts-pytrader/: README.md  app.py  config.py
qts-trader/: .gitignore  app.py  config.json  config.py  requirements.txt
qts-web/: .env.development  .env.production  .eslintrc.js  README.md  package.json  pnpm-lock.yaml  vite.config.ts
qts/admin/: app.py  (+1 more)
script/: conf_admin.json  conf_trader.json  run_admin.bat  run_admin.py  run_trader.py
(+807 files in other folders)
