[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "cachetools",
    "APScheduler",
    "Flask-SocketIO",
    "sqlalchemy",
    "fastapi",
    "fastapi-offline",
    "nest_asyncio",
    "gunicorn",
    "psutil",
    "qts",
    "uvicorn",
    "pyzmq==26.2.0.*",
    "loguru"
]

[tool.setuptools]
#packages = ["qts"]
packages = {find = {include = ["qts*"]}}

